--- a/src/index.css
+++ b/src/index.css
@@ -25,17 +25,29 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
+  flex-direction: column; 
+  align-items: center;   
+  justify-content: flex-start;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 20px;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-bottom: 10px;
+  
 }
 
-button {
+ul {
+  color: rgb(37, 36, 36);
+  text-align: left;
+  margin-top: 0;
+}
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -53,7 +65,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+*/
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -65,4 +77,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} 
