--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,25 @@
   text-align: center;
 }
 
+.todo-list-image {
+  width: 300px;
+  height: auto;
+  padding-left: 50px;
+}
+
+.todo-list-image1 {
+  width: 300px;
+  height: auto;
+  /* padding-left: 50px; */
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
