save list to local storage

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@
   text-align: center;
 }
 
-.todo-list-image {
+/* .todo-list-image {
   width: 300px;
   height: auto;
   padding-left: 50px;
-}
+} */
 
 .todo-list-image1 {
   width: 300px;
