--- a/src/App.css
+++ b/src/App.css
@@ -76,9 +76,9 @@
 .todo-list-item {
   padding: 10px;
   margin: 5px 0 5px -10px;
-  width: 264px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
+  /* width: 264px; */
+  /* background-color: #f9f9f9; */
+  /* border: 1px solid #ddd; */
   border-radius: 4px;
   /* list-style-type: none; */
 }
