--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: cornflowerblue;
+  background-color: rgb(72, 118, 204);
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 10px;
