--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ nav {
   margin-bottom: 40px;
   align-items: center;
 }
+
 .nav-link {
   background-color: rgb(247, 247, 247);
   /* border: 2px solid #909091; */
@@ -38,7 +39,7 @@ nav {
 }
 
 .todo-list-image1 {
-  width: 300px;
+  max-width: 300px;
   height: auto;
   animation: fadeIn 1s ease-in-out forwards;
   display: inline-block;
@@ -88,8 +89,17 @@ nav {
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-size: 14px;
-  color: rgb(37, 37, 37);
+  font-size: 16px;
+  color: rgb(37, 36, 36);
+  font-weight: 600;
+  background-color: rgb(255, 255, 255);
+  
+  /* align-items: center; */
+  /* background-color: red; */
+  /* width: 100%; */
+  /* width: 200px; */
+  /* letter-spacing: 1px; */
+  /* font-family: system-ui; */
 }
 
 #todoTitle:focus {
@@ -98,62 +108,9 @@ nav {
   outline: none; /* Remove default outline */
 }
 
-/* to do list li's styling*/
-.todo-list-item {
-  /* padding: 10px; */
-  max-width: 100%;
-  margin: 5px 0 5px 0px;
-  /* width: 364px; */
-  /* background-color: #f9f9f9; */
-  /* background-color: purple; */
-  /* border: 1px solid #ddd; */
-  border-radius: 4px;
-  border-radius: 4px;
-  list-style-type: none;
-  display: block;
+@media (max-width: 500px) {
+  #todoTitle {
+    width: 240px;
+    align-items: center;
+  }
 }
-
-.todo-item-container {
-  display: flex;
-  flex-direction: row;
-
-  /* justify-content: flex-start; */
-  /* justify-content: space-between; */
-  /* align-items: flex-start; */
-  align-items: center;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  padding-right: 1px;
-  padding-left: 10px;
-  /* background-color: pink; */
-  /* vertical-align: middle; */
-  /* margin-left: 20px; */
-}
-
-.todo-item-container p {
-  padding: 0 10px;
-  flex-grow: 1;
-  /* max-width: 500px;  */
-  /* margin: 0; */
-  max-width: 300px;
-  white-space: normal;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-}
-
-.remove-button {
-  color: white;
-  border-radius: 8px;
-  background-color: rgba(107, 107, 107, 0.719);
-  cursor: pointer;
-  /* margin: 0px 0px 0px 10px; */
-  padding: 0.2em 0.6em;
-  margin-left: 10px;
-}
-
-/* ul { 
-  list-style-type: none; 
-  padding-left: 20px;
-  background-color: pink;
-  width: 800px;
-} */
