--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -77,7 +77,6 @@
   .ListItem {
     max-width: 300px;
     align-items: center;
-    
   }
 
   /* ul {
@@ -102,4 +101,11 @@
     line-height: 1.1;
     /* font-size: 14px; */
   }
+}
+
+p.strikethrough {
+  text-decoration: line-through;
+  color: rgb(100, 100, 100);
+  text-decoration-style: solid;
+  text-decoration-color: rgb(92, 92, 92);
 }
